--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,17 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database:20.2.2'
+    implementation 'com.google.firebase:firebase-firestore:24.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'org.osmdroid:osmdroid-android:6.1.16'
+    implementation 'org.osmdroid:osmdroid-wms:6.1.16'
+//    implementation 'org.osmdroid:osmdroid-geopackage:6.1.16'
+    implementation 'org.osmdroid:osmdroid-mapsforge:6.1.16'
+
+    implementation 'org.slf4j:slf4j-android:1.7.36'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
